--- a/Oloo.html
+++ b/Oloo.html
@@ -20,7 +20,7 @@
         }
     table{font-size: 100;}
 </style>
-<h1>This is my first html documentation</h1>
+<h1>My first html documentation</h1>
 <body>
     <h2>Evans in a snippet</h2>
     <h3>My profile photo</h3>
@@ -69,7 +69,7 @@ Riding bikes</li>
     <label>Email</label>
     <input type="text"Placeholder type="Enter email">
     <label>Password</label>
-    <input type="password"Placeholder type="Enter passwor">
+    <input type="password"Placeholder type="Enter password">
 <button>Join Newsletter</button>
 </body>
 </html>
