--- a/Index.html
+++ b/Index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<div>
 <style>
     body {background-color: beige;}
     h1   {
@@ -20,6 +21,7 @@
         }
     table{font-size: 100;}
 </style>
+</div>
 <h1>My first html documentation</h1>
 <body>
     <h2>Evans in a snippet</h2>
