--- a/Index.html
+++ b/Index.html
@@ -19,7 +19,11 @@
         font-size: 100%;
         font-weight: 100;
         }
-    table{font-size: 100;}
+    table{font-size: 100;
+        border: blue;
+        margin-top: auto;
+        margin-bottom: auto;
+    }
 </style>
 </div>
 <h1>My first html documentation</h1>
